// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EmptyPage renders correctly 1`] = `
<Flex
  className="emptyPage"
  grow={true}
  paddingVertical="x16"
>
  <Flex
    alignChildrenVertical="middle"
    className="textContainer"
    direction="vertical"
  >
    <Text
      align="middle"
      size="x4"
      weight="bold"
    >
      First, you need to build an IPA/APK
    </Text>
  </Flex>
</Flex>
`;

exports[`EmptyPage renders correctly on mobile 1`] = `
<Flex
  className="emptyPage"
  grow={true}
  paddingVertical="x16"
>
  <Flex
    alignChildrenVertical="middle"
    className="textContainer"
    direction="vertical"
  >
    <Text
      align="middle"
      size="x3"
      weight="bold"
    >
      First, you need to build an IPA/APK
    </Text>
  </Flex>
</Flex>
`;
